--- a/chenpeifeng163.html
+++ b/chenpeifeng163.html
@@ -17,6 +17,9 @@
 
 
 <body>
+<div class="skin-container"><img class="bg" src="images/index_007.jpg" width="1920" height="503"></div>
+
+<div class="container">
  <table class="column" cellspacing="0" cellpadding="0" align="center">
   <tbody>
    <tr>
@@ -487,7 +490,7 @@
    </tr>
   </tbody>
  </table>
-
+</div>
  <!-- Js导入之底部 -->
  <script src="js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 
