--- a/chenpeifeng163.html
+++ b/chenpeifeng163.html
@@ -371,42 +371,16 @@
              </tbody>
             </table></td>
           </tr>
+         
           <tr>
            <td class="p15 con"><table cellspacing="0" cellpadding="0" border="0">
              <tbody>
               <tr>
-               <td class="time" valign="top">2015/4-2016/04</td>
-               <td class="rtbox" valign="top"><strong class="txt3">技术主管</strong><span class="p5">|</span><span>开发部</span><span class="p5">|</span><span>￥面议奉告</span></td>
-              </tr>
-              <tr>
-               <td class="phd tb1" colspan="2"><span class="companyName">天池资本有限公司</span><span class="gray">&nbsp;[12个月] </span></td>
-              </tr>
-              <tr>
-               <td class="phd tb1 gray2" colspan="2">金融P2P<span class="p5">|</span>1000人以上<span class="p5">|</span>民营公司
-              </tr>
-              <tr>
-               <td class="tb1" colspan="2"><table cellspacing="0" cellpadding="0" border="0">
-                 <tbody>
-                  <tr>
-                   <td class="keys" valign="top">工作描述：</td>
-                   <td class="txt1" valign="top">技术特性： Spring+MySql......<br>
-				   工作内容：负责公司P2p平台核心代码编写，新框架架构，负责指导公司技术员工进行团队协助开发。主要成绩为善行创投www.tczb188.com的二次开发实现，各段时间活动的实现。。</td>
-                  </tr>
-                 </tbody>
-                </table></td>
-              </tr>
-             </tbody>
-            </table></td>
-          </tr>
-          <tr>
-           <td class="p15 con"><table cellspacing="0" cellpadding="0" border="0">
-             <tbody>
-              <tr>
-               <td class="time" valign="top">2012/07-2015/4</td>
+               <td class="time" valign="top">2012/07-2016/4</td>
                <td class="rtbox" valign="top"><strong class="txt3">技术总监</strong><span class="p5">|</span><span>开发部</span><span class="p5">|</span><span>￥面议奉告</span></td>
               </tr>
               <tr>
-               <td class="phd tb1" colspan="2"><span class="companyName">深圳钻石金融集团</span><span class="gray">&nbsp;[22个月] </span></td>
+               <td class="phd tb1" colspan="2"><span class="companyName">天池资本（长鸿集团）</span><span class="gray">&nbsp;[33个月] </span></td>
               </tr>
               <tr>
                <td class="phd tb1 gray2" colspan="2">金融/P2P/基金<span class="p5">|</span>100多人<span class="p5">|</span>民营公司
